// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <div
    className="Panel__PanelWrapper-sc-48epke-0 cFaOzN"
    id={null}
  >
    <section
      className="Panel__SectionWrapper-sc-48epke-1 jdYZoW"
      id={null}
    />
  </div>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <div
    className="Panel__PanelWrapper-sc-48epke-0 cFaOzN"
    id={null}
  >
    <section
      className="Panel__SectionWrapper-sc-48epke-1 jdYZoW Panel__PanelSection-sc-48epke-2 cYHdrc"
      id={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIbntl"
            fontSize="0.876em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            Header
          </p>
        </div>
      </div>
    </section>
    <section
      className="Panel__SectionWrapper-sc-48epke-1 jdYZoW"
      id={null}
    />
  </div>
</div>
`;

exports[` 3`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <div
    className="Panel__PanelWrapper-sc-48epke-0 cFaOzN"
    id={null}
  >
    <section
      className="Panel__SectionWrapper-sc-48epke-1 jdYZoW"
      id={null}
    />
    <section
      className="Panel__SectionWrapper-sc-48epke-1 jdYZoW Panel__PanelSection-sc-48epke-2 cYHdrc"
      id={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIbntl"
            fontSize="0.876em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            Footer
          </p>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[` 4`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <div
    className="Panel__PanelWrapper-sc-48epke-0 cFaOzN"
    id={null}
  >
    <section
      className="Panel__SectionWrapper-sc-48epke-1 jdYZoW Panel__PanelSection-sc-48epke-2 cYHdrc"
      id={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIbntl"
            fontSize="0.876em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            Header
          </p>
        </div>
      </div>
    </section>
    <section
      className="Panel__SectionWrapper-sc-48epke-1 jdYZoW"
      id={null}
    />
    <section
      className="Panel__SectionWrapper-sc-48epke-1 jdYZoW Panel__PanelSection-sc-48epke-2 cYHdrc"
      id={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIbntl"
            fontSize="0.876em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            Footer
          </p>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[` 5`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <div
    className="Panel__PanelWrapper-sc-48epke-0 cFaOzN"
    id="Panel"
  >
    <section
      className="Panel__SectionWrapper-sc-48epke-1 jdYZoW Panel__PanelSection-sc-48epke-2 cYHdrc"
      id="Panel_header"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIbntl"
            fontSize="0.876em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            Header
          </p>
        </div>
      </div>
    </section>
    <section
      className="Panel__SectionWrapper-sc-48epke-1 jdYZoW"
      id="Panel_body"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 fakPiP Card__CardGridWrapper-sc-1g3s676-6 iqBfAy"
        id={null}
        rows={null}
      >
        <div
          className="Card__CardWrapper-sc-1g3s676-5 gtDGJG"
          href={null}
          id={null}
          media={null}
          onClick={null}
        />
        <div
          className="Card__CardWrapper-sc-1g3s676-5 gtDGJG"
          href={null}
          id={null}
          media={null}
          onClick={null}
        />
        <div
          className="Card__CardWrapper-sc-1g3s676-5 gtDGJG"
          href={null}
          id={null}
          media={null}
          onClick={null}
        />
        <div
          className="Card__CardWrapper-sc-1g3s676-5 gtDGJG"
          href={null}
          id={null}
          media={null}
          onClick={null}
        />
        <div
          className="Card__CardWrapper-sc-1g3s676-5 gtDGJG"
          href={null}
          id={null}
          media={null}
          onClick={null}
        />
        <div
          className="Card__CardWrapper-sc-1g3s676-5 gtDGJG"
          href={null}
          id={null}
          media={null}
          onClick={null}
        />
        <div
          className="Card__CardWrapper-sc-1g3s676-5 gtDGJG"
          href={null}
          id={null}
          media={null}
          onClick={null}
        />
      </section>
    </section>
    <section
      className="Panel__SectionWrapper-sc-48epke-1 jdYZoW Panel__PanelSection-sc-48epke-2 cYHdrc"
      id="Panel_footer"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIbntl"
            fontSize="0.876em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            Footer
          </p>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[` 6`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <div
    className="Panel__PanelWrapper-sc-48epke-0 cFaOzN"
    id="Panel"
  >
    <section
      className="Panel__SectionWrapper-sc-48epke-1 jdYZoW Panel__PanelSection-sc-48epke-2 cYHdrc"
      id="Panel_header"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIbntl"
            fontSize="0.876em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            Header
          </p>
        </div>
      </div>
    </section>
    <section
      className="Panel__SectionWrapper-sc-48epke-1 jdYZoW"
      id="Panel_body"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 fakPiP Card__CardGridWrapper-sc-1g3s676-6 iqBfAy"
        id={null}
        rows={null}
      >
        <div
          className="Card__CardWrapper-sc-1g3s676-5 gtDGJG"
          href={null}
          id={null}
          media={null}
          onClick={null}
        />
        <div
          className="Card__CardWrapper-sc-1g3s676-5 gtDGJG"
          href={null}
          id={null}
          media={null}
          onClick={null}
        />
        <div
          className="Card__CardWrapper-sc-1g3s676-5 gtDGJG"
          href={null}
          id={null}
          media={null}
          onClick={null}
        />
        <div
          className="Card__CardWrapper-sc-1g3s676-5 gtDGJG"
          href={null}
          id={null}
          media={null}
          onClick={null}
        />
        <div
          className="Card__CardWrapper-sc-1g3s676-5 gtDGJG"
          href={null}
          id={null}
          media={null}
          onClick={null}
        />
        <div
          className="Card__CardWrapper-sc-1g3s676-5 gtDGJG"
          href={null}
          id={null}
          media={null}
          onClick={null}
        />
        <div
          className="Card__CardWrapper-sc-1g3s676-5 gtDGJG"
          href={null}
          id={null}
          media={null}
          onClick={null}
        />
      </section>
    </section>
    <section
      className="Panel__SectionWrapper-sc-48epke-1 jdYZoW Panel__PanelSection-sc-48epke-2 cYHdrc"
      id="Panel_footer"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIbntl"
            fontSize="0.876em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            Footer
          </p>
        </div>
      </div>
    </section>
  </div>
</div>
`;
